Fixed review findings

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -52,7 +52,8 @@
    "id": "342a7800-253d-43a0-9bd7-89932876317d",
    "metadata": {},
    "source": [
-    "JupySQL allows you to run SQL and plot large datasets in Jupyter via a %sql, %%sql, and %sqlplot magics. Using these magics, you can enter SQL directly into notebook cells.\nIn the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
+    "JupySQL allows you to run SQL and plot large datasets in Jupyter via a %sql, %%sql, and %sqlplot magics. Using these magics, you can enter SQL directly into notebook cells.\n",
+    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
     "\n",
     "### 2.1 Create Database Tables\n",
     "\n",
@@ -67,8 +68,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE\n",
-    "OR REPLACE TABLE US_AIRLINES (\n",
+    "CREATE OR REPLACE TABLE US_AIRLINES (\n",
     "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0) IDENTITY PRIMARY KEY,\n",
     "  CARRIER_NAME VARCHAR(1000)\n",
     ")"
@@ -82,8 +82,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE\n",
-    "OR REPLACE TABLE US_FLIGHTS (\n",
+    "CREATE OR REPLACE TABLE US_FLIGHTS (\n",
     "  FL_DATE TIMESTAMP, \n",
     "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
     "  ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
@@ -209,8 +208,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE\n",
-    "OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com'"
+    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 \n",
+    "    TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com'"
    ]
   },
   {
@@ -229,8 +228,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE\n",
-    "OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 's3://ai-lab-example-data-s3'"
+    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 \n",
+    "    TO 's3://ai-lab-example-data-s3'"
    ]
   },
   {
@@ -344,7 +343,7 @@
    "id": "e023d10d-ccdb-4c2d-8fa5-655e227e8c76",
    "metadata": {},
    "source": [
-    "We will also verify the success using a query with separate params and [PyExasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html):"
+    "We will also verify the success by using a query with separate parameters and [PyExasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html):"
    ]
   },
   {
@@ -492,7 +491,12 @@
    "source": [
     "## 4. Using SQLAlchemy with Exasol AI Lab\n",
     "\n",
-    "The function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS.\n",
+    "[SQLAlchemy](https://www.sqlalchemy.org/) is a Python SQL Toolkit and Object Relational Mapper for application developers.\n",
+    "                                                               \n",
+    "It provides a full suite of well known enterprise-level persistence patterns, designed for efficient and high-performing database access, adapted into a simple and Pythonic domain language.\n",
+    "\n",
+    "In Exasol AI Lab, the function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS.\n",
+    "\n",
     "This engine will be used by the examples based on SQLAlchemy."
    ]
   },
@@ -516,26 +520,7 @@
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using SQLAlchemy.\n",
     "\n",
-    "First we will truncate table `US_FLIGHTS` again:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b831c676-b307-4af0-9b55-0ad563cfdeec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "TRUNCATE TABLE US_FLIGHTS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d228759-c857-4b28-8b93-ca9baae3bc54",
-   "metadata": {},
-   "source": [
-    "Next we will import the flight data once again, now using SQLAlchemy:"
+    "We will once again truncate table `US_FLIGHTS` and import the flight data, now using SQLAlchemy:"
    ]
   },
   {
@@ -559,7 +544,9 @@
     "    )\n",
     ")\n",
     "with engine.connect() as conn:\n",
+    "    conn.execute(\"TRUNCATE TABLE US_FLIGHTS\")\n",
     "    result = conn.execute(t)\n",
+    "\n",
     "print(f\"Imported {result.rowcount} rows.\")"
    ]
   },
@@ -781,7 +768,9 @@
    "id": "18cb2e3b-c019-4266-ae0e-4e9cbd5f3778",
    "metadata": {},
    "source": [
-    "And now, let's read the contents of the file in the BucketFS we just created before:"
+    "And now, let's read the contents of the file in the BucketFS we just created before. \n",
+    "\n",
+    "The file's BucketFS location is represented by an instance of class [exasol.bucketfs.PathLike](https://exasol.github.io/bucketfs-python/main/api.html#exasol.bucketfs._path.PathLike) and method `as_udf_path()` returns the file's path as seen by a UDF:"
    ]
   },
   {
