Added link to dedicated Tutorial on Script-Languages Containers

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -662,7 +662,7 @@
     "\n",
     "Such data can be arbitrary files including \n",
     "* Data to be processed by [User Defined Scripts](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm) (UDFs)\n",
-    "* [Script-Language Containers](https://github.com/exasol/script-languages-release) (SLCs)\n",
+    "* [Script-Languages Containers](https://github.com/exasol/script-languages-release) (SLCs), see also the dedicated [Tutorial on Script-Languages Containers](script_languages_container/using_the_script_languages_container_tool.ipynb)\n",
     "* AI Models\n",
     "\n",
     "### 5.1 Uploading a File to the BucketFS\n",
