--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -770,7 +770,7 @@
    "source": [
     "And now, let's read the contents of the file in the BucketFS we just created before. \n",
     "\n",
-    "The file's BucketFS location is represented by an instance of class [exasol.bucketfs.PathLike](https://exasol.github.io/bucketfs-python/main/api.html#exasol.bucketfs._path.PathLike) and method `as_udf_path()` returns the file's path as seen by a UDF:"
+    "The file's BucketFS location is represented by an instance of class [exasol.bucketfs.PathLike](https://exasol.github.io/bucketfs-python/main/api.html#exasol.bucketfs._path.PathLike) and the method `as_udf_path()` returns the file's path as seen by a UDF:"
    ]
   },
   {
