Updated TE UDF parameters

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -154,7 +154,8 @@
     "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
-    "        '{{MY_LABELS}}'\n",
+    "        '{{MY_LABELS}}',\n",
+    "        'ALL'\n",
     "    )\n",
     ")\n",
     "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
