Fixed ibis and te noteboos

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "52ac52b2-0bdb-441b-aaf2-f57be68dbf01",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
    ],
    "source": [
     "airlines = conn.table('US_AIRLINES')\n",
-    "delay_by_carrier = delay_by_carrier.join(airlines, 'OP_CARRIER_AIRLINE_ID', 'inner')\n",
+    "delay_by_carrier = delay_by_carrier.join(airlines, 'OP_CARRIER_AIRLINE_ID', how='inner')\n",
     "delay_by_carrier.head().to_pandas()"
    ]
   },
