--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "JupySQL allows you to run SQL and plot large datasets in Jupyter via a %sql, %%sql, and %sqlplot magics. Using these magics, you can enter SQL directly into notebook cells.\n",
-    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
+    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](./first_steps.ipynb/#4.-Using-SQLAlchemy-with-Exasol-AI-Lab) below.\n",
     "\n",
     "### 2.1 Create Database Tables\n",
     "\n",
@@ -430,7 +430,7 @@
    "id": "23e99c7a-e6a2-4497-8a74-054dab3ca131",
    "metadata": {},
    "source": [
-    "### 3.2 Importing a Parquet File from an AWS S3 Bucket\n",
+    "### 3.3 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
     "This demo uses \n",
     "* a file already uploaded to S3 bucket `ai-lab-example-data-s3` \n",
@@ -516,7 +516,7 @@
    "id": "e9c7e497-cf0a-4158-b656-221a80086a90",
    "metadata": {},
    "source": [
-    "### 3.1 Importing a CSV File from Remote\n",
+    "### 4.1 Importing a CSV File from Remote\n",
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using SQLAlchemy.\n",
     "\n",
@@ -555,9 +555,9 @@
    "id": "f2228c1a-b6ce-432f-b869-ad18abf04b93",
    "metadata": {},
    "source": [
-    "### 3.3 Importing a Parquet File from an AWS S3 Bucket\n",
+    "### 4.2 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
-    "This section demonstrates how to import a CSV file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
+    "This section demonstrates how to import a Parquet file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
     "\n",
     "First we will truncate table `US_FLIGHTS` again:"
    ]
@@ -614,7 +614,7 @@
    "id": "35335a66-dace-4082-ba35-a3bcc1ed3d54",
    "metadata": {},
    "source": [
-    "### 3.4 Querying using SQLAlchemy’s Metadata Concept\n",
+    "### 4.3 Querying using SQLAlchemy’s Metadata Concept\n",
     "\n",
     "This section demonstrates using some SQLAlchemy features \n",
     "* Instantiating class [sqlalchemy.MetaData](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
