#440: Re-enabled Parquet import in notebook `first_steps.ipynb`

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "JupySQL allows you to run SQL and plot large datasets in Jupyter via a %sql, %%sql, and %sqlplot magics. Using these magics, you can enter SQL directly into notebook cells.\n",
-    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
+    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](./first_steps.ipynb/#4.-Using-SQLAlchemy-with-Exasol-AI-Lab) below.\n",
     "\n",
     "### 2.1 Create Database Tables\n",
     "\n",
@@ -256,9 +256,7 @@
    "id": "0dc80445-e5c0-43c1-ae34-f16326d6fb94",
    "metadata": {},
    "source": [
-    "**Please note**: \n",
-    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
-    "* Hence, the import is currently commented out.\n",
+    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
@@ -271,10 +269,9 @@
    "outputs": [],
    "source": [
     "%%sql \n",
-    "SELECT 1 -- avoid error from empty cell \n",
     "\n",
-    "-- IMPORT INTO US_FLIGHTS FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
-    "--    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
+    "IMPORT INTO US_FLIGHTS FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
+    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
    ]
   },
   {
@@ -430,7 +427,7 @@
    "id": "23e99c7a-e6a2-4497-8a74-054dab3ca131",
    "metadata": {},
    "source": [
-    "### 3.2 Importing a Parquet File from an AWS S3 Bucket\n",
+    "### 3.3 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
     "This demo uses \n",
     "* a file already uploaded to S3 bucket `ai-lab-example-data-s3` \n",
@@ -455,9 +452,7 @@
    "id": "5dfdd7ec-5cd5-4082-a565-ee17166fd691",
    "metadata": {},
    "source": [
-    "**Please note**: \n",
-    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
-    "* Hence, the import is currently commented out.\n",
+    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
@@ -479,9 +474,9 @@
     "    \"file\": \"first_steps/US_FLIGHTS_FEB_2024.parquet\",\n",
     "}\n",
     "\n",
-    "#with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "#    result = conn.execute(query, params)\n",
-    "#print(f\"Imported {result.rowcount()} rows.\")"
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    result = conn.execute(query, params)\n",
+    "print(f\"Imported {result.rowcount()} rows.\")"
    ]
   },
   {
@@ -516,7 +511,7 @@
    "id": "e9c7e497-cf0a-4158-b656-221a80086a90",
    "metadata": {},
    "source": [
-    "### 3.1 Importing a CSV File from Remote\n",
+    "### 4.1 Importing a CSV File from Remote\n",
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using SQLAlchemy.\n",
     "\n",
@@ -555,9 +550,9 @@
    "id": "f2228c1a-b6ce-432f-b869-ad18abf04b93",
    "metadata": {},
    "source": [
-    "### 3.3 Importing a Parquet File from an AWS S3 Bucket\n",
+    "### 4.2 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
-    "This section demonstrates how to import a CSV file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
+    "This section demonstrates how to import a Parquet file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
     "\n",
     "First we will truncate table `US_FLIGHTS` again:"
    ]
@@ -578,9 +573,7 @@
    "id": "d11dcb6d-d3e5-4e1e-8d61-ba59897c56e9",
    "metadata": {},
    "source": [
-    "**Please note**: \n",
-    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
-    "* Hence, the import is currently commented out.\n",
+    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
@@ -604,9 +597,9 @@
     "    )\n",
     ")\n",
     "\n",
-    "# with engine.connect() as conn:\n",
-    "#     result = conn.execute(t)\n",
-    "# print(f\"Imported {result.rowcount} rows.\")"
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(t)\n",
+    "print(f\"Imported {result.rowcount} rows.\")"
    ]
   },
   {
@@ -614,7 +607,7 @@
    "id": "35335a66-dace-4082-ba35-a3bcc1ed3d54",
    "metadata": {},
    "source": [
-    "### 3.4 Querying using SQLAlchemy’s Metadata Concept\n",
+    "### 4.3 Querying using SQLAlchemy’s Metadata Concept\n",
     "\n",
     "This section demonstrates using some SQLAlchemy features \n",
     "* Instantiating class [sqlalchemy.MetaData](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
