#337: Ensured correct spelling for AI Lab

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook step [Configure the AI-Lab](../main_config.ipynb) needs to be completed.\n",
+    "Prior to using this notebook step [Configure the AI Lab](../main_config.ipynb) needs to be completed.\n",
     "\n",
     "Make sure to enable the `nvidia` accelerator option in case you choose the \"Exasol Docker DB\" as database."
    ]
