--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Once specified, the parameters are stored in a configuration store. All notebooks, including this one, access configuration data in this store. The configuration store is encrypted and protected with a password.\n",
     "\n",
-    "Before starting working with any notebook in the AI-Lab one needs to connect to the configuration store providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
+    "Before starting working with any notebook in the AI Lab one needs to connect to the configuration store providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
     "\n",
     "## Open Secure Configuration Storage"
    ]
@@ -65,7 +65,7 @@
    "source": [
     "## Choose the database\n",
     "\n",
-    "First, choose the database—AI-Lab offers an Exasol Docker-DB, a single-node Docker container database, ideal for lightweight proof-of-concept experiments. For solving real world tasks, consider an external Exasol database.\n",
+    "First, choose the database—AI Lab offers an Exasol Docker-DB, a single-node Docker container database, ideal for lightweight proof-of-concept experiments. For solving real world tasks, consider an external Exasol database.\n",
     "\n",
     "The chosen database is stored in the configuration. If configured, no need to repeat unless switching to another database is desired."
    ]
@@ -107,7 +107,7 @@
    "source": [
     "## Start the Exasol Docker-DB\n",
     "\n",
-    "If we choose to use the Exasol Docker-DB we need to launch it after every restart of the AI-Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
+    "If we choose to use the Exasol Docker-DB we need to launch it after every restart of the AI Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
     "\n",
     "For an external Exasol database, this operation will have no effect."
    ]
