--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
@@ -11,15 +11,15 @@
     "\n",
     "# Fix the Version of Python Library Scikit-learn\n",
     "\n",
-    "This notebook ensures the AI-Lab is using the same version of the python library `scikit-learn` as the one used by the built-in [Script Language Container (SLC)](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm#ScriptLanguageContainer) inside the Exasol database.\n",
+    "This notebook ensures the AI Lab is using the same version of the python library `scikit-learn` as the one used by the built-in [Script Language Container (SLC)](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm#ScriptLanguageContainer) inside the Exasol database.\n",
     "\n",
     "## Rationale\n",
     "\n",
-    "Using identical versions is required when transferring the Scikit-learn model from the AI-Lab to the database SLC.\n",
+    "Using identical versions is required when transferring the Scikit-learn model from the AI Lab to the database SLC.\n",
     "\n",
-    "The AI-Lab serializes the Scikit-learn model with [pickle](https://docs.python.org/3/library/pickle.html) and uploads it into the BucketFS of the database. The UDF using the built-in SLC can only _deserialize_ the model if it is using the same version of Scikit-learn as was used for serializing it. The specific version of the library available in the built-in SLC depends on the release version of the database and cannot be controlled by the AI-Lab.\n",
+    "The AI Lab serializes the Scikit-learn model with [pickle](https://docs.python.org/3/library/pickle.html) and uploads it into the BucketFS of the database. The UDF using the built-in SLC can only _deserialize_ the model if it is using the same version of Scikit-learn as was used for serializing it. The specific version of the library available in the built-in SLC depends on the release version of the database and cannot be controlled by the AI Lab.\n",
     "\n",
-    "Running the following script will update the version of the library used in the AI-Lab, if required.\n",
+    "Running the following script will update the version of the library used in the AI Lab, if required.\n",
     "\n",
     "## Open Secure Configuration Storage"
    ]
@@ -77,9 +77,9 @@
    "id": "e4b0dc24-6e02-4305-8fa1-15f68afac360",
    "metadata": {},
    "source": [
-    "## Compare the Scikit-learn Version and Update the AI-Lab if Required\n",
+    "## Compare the Scikit-learn Version and Update the AI Lab if Required\n",
     "\n",
-    "The next cell compares the Scikit-learn version returned by the UDF with the Scikit-learn version in the AI-Lab environment. If they differ, then the cell installs the UDF's Scikit-learn version in the AI-Lab environment."
+    "The next cell compares the Scikit-learn version returned by the UDF with the Scikit-learn version in the AI Lab environment. If they differ, then the cell installs the UDF's Scikit-learn version in the AI Lab environment."
    ]
   },
   {
@@ -95,12 +95,12 @@
     "my_version = sklearn.__version__\n",
     "\n",
     "if slc_scikit_learn_version == my_version:\n",
-    "    print(f\"AI-Lab scikit-learn version {my_version} is identical to that of the SLC.\\nNothing to do.\")\n",
+    "    print(f\"AI Lab scikit-learn version {my_version} is identical to that of the SLC.\\nNothing to do.\")\n",
     "else:\n",
-    "    print(f\"AI-Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_scikit_learn_version} ...\")\n",
+    "    print(f\"AI Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_scikit_learn_version} ...\")\n",
     "    %pip install \"scikit_learn=={slc_scikit_learn_version}\"\n",
     "    sklearn = reload(sklearn)\n",
-    "    print(f\"Updated AI-Lab scikit-learn to version {sklearn.__version__}.\")"
+    "    print(f\"Updated AI Lab scikit-learn to version {sklearn.__version__}.\")"
    ]
   },
   {
