--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -20,7 +20,7 @@
     "## Prerequisites\n",
     "\n",
     "Before using this set of notebooks the following steps need to be completed:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb)\n",
+    "1. [Configure the AI Lab](../main_config.ipynb)\n",
     "2. [Fix the Version of Python Library Scikit-learn](./sklearn_fix_version.ipynb)\n",
     "3. [Load the MAGIC Gamma Telescope data](../data/data_telescope.ipynb)\n",
     "4. [Load the Abalone data](../data/data_abalone.ipynb)\n",
