--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -210,7 +210,7 @@
     "### Create a View on the Data\n",
     "\n",
     "This dataset has ~3600 entries. You could run the preprocessing for the whole dataset, but it would take quite some time. Instead, we will create a view containing only a part of the dataset, and use this view as the base for our preprocessing.\n",
-    "We set the size of this view here. If you want to see how the AI-Lab handles bigger datasets on your Exasol instance, you can set the `view_size` higher."
+    "We set the size of this view here. If you want to see how the AI Lab handles bigger datasets on your Exasol instance, you can set the `view_size` higher."
    ]
   },
   {
