--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -335,7 +335,7 @@
     "        header_lbl.value = ITDEStatus.inaccessible.value\n",
     "        warning_text = f'The docker socket is not mounted. Please consult the ' \\\n",
     "            f'<a href=\"{UsefulURLs.user_manual_docker_db.value}\" target=\"_blank\">documentation</a> ' \\\n",
-    "            'on how to start the AI-Lab that will use the Integrated Exasol Docker-DB.'\n",
+    "            'on how to start the AI Lab that will use the Integrated Exasol Docker-DB.'\n",
     "        warning_html = _create_warning(warning_text)\n",
     "        group_items.append(widgets.Box([warning_html], layout=ui_look.row_layout))\n",
     "        action_buttons = []\n",
