--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
@@ -18,7 +18,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
+    "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "2. [Load the US Flights data](../data/data_flights.ipynb).\n",
     "\n",
     "## Setup\n",
