--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -18,7 +18,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
+    "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "2. [Initialize the SageMaker Extension](sme_init.ipynb).\n",
     "3. [Load the MAGIC Gamma Telescope data](../data/data_telescope.ipynb).\n",
     "\n",
