--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
@@ -9,7 +9,7 @@
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
     "</div>\n",
     "\n",
-    "# Welcome to the Exasol AI-Lab\n",
+    "# Welcome to the Exasol AI Lab\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -17,7 +17,7 @@
     "\n",
     "### Exasol provisions for ML/AI\n",
     "\n",
-    "At the core of The AI-Lab are three fundamental features of Exasol: \n",
+    "At the core of The AI Lab are three fundamental features of Exasol: \n",
     "- Massively Parallel Processing (MPP) Architecture.\n",
     "- User Defined Functions (UDF).\n",
     "- BucketFS file system.\n",
@@ -34,11 +34,12 @@
     "\n",
     "The tutorials are organized into topics, each one in a separate directory. The links below lead to the main page of a topic, usually an introduction. From there one can follow through the tutorials on the topic or go to a particular notebook.\n",
     "\n",
-    "The configuration notebook must be visited at least once. When using the provided demo database - Exasol Docker-DB - the configuration notebook may need to be re-visited at the beginning of every session with AI-Lab to start or restart this database. \n",
+    "The configuration notebook must be visited at least once. When using the provided demo database - Exasol Docker-DB - the configuration notebook may need to be re-visited at the beginning of every session with AI Lab to start or restart this database. \n",
     "\n",
     "Some tutorials require example data. The data can be loaded into the database using notebooks in the data loading topic. \n",
     "\n",
     "1. [Configuration](./main_config.ipynb)\n",
+    "1. [First steps](first_steps.ipynb)\n",
     "1. [Loading data](data/data_content.ipynb)\n",
     "1. [Using scikit-learn](sklearn/sklearn_introduction.ipynb)\n",
     "1. [SageMaker extension](sagemaker/sme_introduction.ipynb)\n",
