--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
@@ -9,7 +9,7 @@
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
     "</div>\n",
     "\n",
-    "# Huggingface credentials UI\n",
+    "# Hugging Face credentials UI\n",
     "\n",
     "<b>This notebook is not supposed to be used on its own.<b>"
    ]
@@ -48,7 +48,7 @@
     "        ('Access token', widgets.Password(value=ai_lab_config.get(CKey.huggingface_token)), CKey.huggingface_token)\n",
     "    ]\n",
     "\n",
-    "    return get_generic_config_ui(conf, [inputs], ['Huggingface Access Parameters'])\n"
+    "    return get_generic_config_ui(conf, [inputs], ['Hugging Face Access Parameters'])\n"
    ]
   }
  ],
