--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_introduction.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "The Exasol Sagemaker Extension allows the development of an end-to-end machine learning project on data stored in Exasol using the AWS SageMaker Autopilot service.\n",
+    "The Exasol SageMaker Extension allows the development of an end-to-end machine learning project on data stored in Exasol using the AWS SageMaker Autopilot service.\n",
     "\n",
-    "### AWS Sagemaker Autopilot Service\n",
+    "### AWS SageMaker Autopilot Service\n",
     "\n",
     "AWS SageMaker is an AWS public cloud service in which users can build and deploy machine learning models. SageMaker provides a number of levels of abstraction for machine learning model development. At one of its highest levels of abstraction, SageMaker enables users to use an Automated machine learning (AutoML) service, called Autopilot in AWS, which automates the process of applying machine learning to real-world problems.\n",
     "\n",
@@ -24,11 +24,11 @@
     "* Tune and optimize model hyper-parameters.\n",
     "* Post-process machine learning models.\n",
     "\n",
-    "The Exasol Sagemaker Extension takes these advantages of AWS Autopilot and enables users to easily create effective and efficient machine learning models without expert knowledge.\n",
+    "The Exasol SageMaker Extension takes these advantages of AWS Autopilot and enables users to easily create effective and efficient machine learning models without expert knowledge.\n",
     "\n",
     "### Exasol SageMaker Extension\n",
     "\n",
-    "The Exasol Sagemaker Extension provides a Python library together with Exasol Scripts and UDFs that train Machine Learning Models on data stored in Exasol using AWS SageMaker Autopilot service.\n",
+    "The Exasol SageMaker Extension provides a Python library together with Exasol Scripts and UDFs that train Machine Learning Models on data stored in Exasol using AWS SageMaker Autopilot service.\n",
     "\n",
     "The extension exports a given Exasol table into AWS S3, and then triggers Machine Learning training using the AWS Autopilot service. It provides a script for polling training status. In order to perform predictions on a trained Autopilot model, one of the methods is to deploy the model to the real-time AWS endpoint. This extension provides Lua scripts for creating/deleting real-time endpoints and creates a model-specific UDF script for making real-time predictions. Here is the schematic picture of the solution.\n",
     "\n",
